[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["Emmanuel Oluwatosin Alao <Afrikareportersng@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_lms"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
